--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,24 @@
             <version>5.9.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+
 
     </dependencies>
+
+
     <repositories>
         <repository>
             <snapshots>
@@ -82,6 +98,12 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>2.12.4</version>
+              <configuration>
+                  <!-- Specify your TestNG XML file location -->
+                  <suiteXmlFiles>
+                      <suiteXmlFile>testng.xml</suiteXmlFile>
+                  </suiteXmlFiles>
+              </configuration>
           </plugin>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
